--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -477,7 +477,9 @@
 <h4>本周取分項目</h4>
 <p></p>
 <p><a href="https://cad.onshape.com/documents/2bb180e3cbfd2e4dc3688ff8/w/075507e9c48214bd412d878b/e/4f8e851ed924f3803d7a99d60">W16 Onshape</a></p>
+<p><a href="https://cad.onshape.com/documents/e12b5bb274a7d3cb9e1ca490/w/b65b4e7fda2b1b8e3d3f1d95/e/1b8feab877ab9d47edaad5a3">新W16 Onshape</a></p>
 <p><a class="btn-sm btn BtnGroup-item" data-view-component="true" href="https://github.com//40823233/cd2021/raw/main/downloads/W16/W16.ttt" id="raw-url" role="button"> 2、3項</a></p>
+<p><a class="btn-sm btn BtnGroup-item" data-view-component="true" href="https://github.com//40823233/cd2021/raw/main/downloads/W16/新W16.ttt" id="raw-url" role="button"> 新2、3項</a></p>
 <p>參考<a href="https://github.com/40823233/cd2021/blob/main/downloads/W16/W16.lua">程式</a></p>
 <p>https://github.com/40823233/cd2021/blob/main/downloads/W16/W16.lua</p>
 <p>4、5項嘗試補完中(6/24) </p>
@@ -491,10 +493,8 @@
 <h4>4. 逆向運動學函式 (20%)</h4>
 <p>請根據 W15 線上課程內容之 Inverse Kinematics 方程式 (<a href="https://www.youtube.com/watch?v=IKOGwoJ2HLk&amp;t=35s">影片1</a><span> </span>或<a href="https://www.youtube.com/watch?v=eIZuz1XCd0w&amp;t=183s">影片2</a>), 以程式指定方塊取放之兩個位置 - (0.2, 0.7, 0.05) 與 (-0.3, -0.55, 0.05), 以前述 Leo Editor Lua 程式編寫方法, 分別採鍵盤控制與程式迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
 <h4>5. Python remote API 逆向運動學函式 (20%)</h4>
-<p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
-<h1>W17</h1>
-<p></p>
-<h1>W18</h1>
+<p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p><h1>W17</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/TAA-D4IrgXY" title="YouTube video player" width="560"></iframe></p><h1>W18</h1>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/iBipTOx0DDg" title="YouTube video player" width="560"></iframe></p>
 <h1>stage1-bg27</h1>
 <p>此次分組中我是組長，我們兩個思考了很久，最終決定以這個來進行，由另一個人進行繪圖模擬，我於繪圖中進行討論哪裡需要修改，而我則負責處理網頁，做報告，報告等。</p>
